LPS Create ObjectState endpoints
